# llmace

./: .gitignore  Agentic Context Engineering.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  env.example  pyproject.toml  run_tests.sh  setup.cfg  verify_install.py
.github/workflows/: tests.yml
docs/: API.md  EMBEDDING_CLIENT_FEATURE.md  IMPLEMENTATION.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  RENAMING_SUMMARY.md  SETUP_GUIDE.md  TESTING.md  TYPE_SAFETY_IMPROVEMENTS.md
examples/: README.md  auto_reflection.py  basic_usage.py  openrouter_integration.py
llmace/: __init__.py  ace.py
llmace/config/: __init__.py  templates.py
llmace/core/: __init__.py  context.py  operations.py  schemas.py
llmace/integrations/: openai.py
llmace/reflection/: __init__.py  curator.py  reflector.py
llmace/utils/: __init__.py  embeddings.py  formatting.py  logging.py
src/llmace/: __init__.py  ace.py
src/llmace/config/: defaults.py  templates.py
src/llmace/core/: __init__.py  context.py  operations.py  schemas.py
src/llmace/integrations/: __init__.py  openai.py
src/llmace/reflection/: __init__.py  curator.py  reflector.py
src/llmace/utils/: __init__.py  embeddings.py  formatting.py  logging.py
tests/: README.md  __init__.py  benchmark_faq.py  benchmark_suite.py  quick_test.py  test_core.py  test_langgraph_integration.py  test_llmace_effectiveness.py
